--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^8.0.2
+  flutter_bloc: ^9.1.1
+  bloc: ^9.2.0
+  equatable: ^2.0.8
+  dio: ^5.9.1
+  get_it: ^9.2.1
+  shared_preferences: ^2.5.4
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_test:
