--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,55 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter/Dart/Pub
 .dart_tool/
-.flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
-/build/
-/coverage/
+build/
+/cache/
+/lib/generated_plugin_registrant.dart
+/lib/plugin_registrant.dart
 
-# Symbolication related
-app.*.symbols
+# Build logs
+*.log
 
-# Obfuscation related
-app.*.map.json
+# Sensitive environment variables
+*.env
+.env
+.env.*
 
-# Android Studio will place build artifacts here
+# Android
+.gradle/
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/key.properties
+
+# iOS
+/ios/Flutter/App.framework
+/ios/Flutter/Flutter.framework
+/ios/Flutter/Flutter.podspec
+/ios/Flutter/Generated.xcconfig
+/ios/Flutter/app.flx
+/ios/Flutter/app.zip
+/ios/Flutter/flutter_assets/
+/ios/Flutter/flutter_export_environment.sh
+/ios/Pods/
+
+# macOS
+/macos/Flutter/GeneratedPluginRegistrant.swift
+/macos/Flutter/ephemeral/
+/macos/Pods/
+
+# Windows
+/windows/flutter/ephemeral/
+
+# IntelliJ / Android Studio
+.idea/
+*.iml
+*.iws
+
+# Visual Studio Code
+.vscode/
+
+# Web
+/build/web/
+
